feat: auth features added in client and server, sidebar and home page
