# apps/server/Server.Application/Abstractions/Services/IHasher.cs
@@ -1,0 +1,8 @@
+﻿namespace Server.Application.Abstractions.Services
+{
+    public interface IHasher
+    {
+        string Hash(string password);
+        bool Verify(string hashedPassword, string password);
+    }
+}
