# apps/server/Server.Application/Users/Validators/LoginUserCommandValidator.cs
@@ -1,0 +1,20 @@
+﻿using FluentValidation;
+
+using Server.Application.Users.Commands;
+
+namespace Server.Application.Users.Validators
+{
+    public class LoginUserCommandValidator : AbstractValidator<LoginUserCommand>
+    {
+        public LoginUserCommandValidator()
+        {
+            RuleFor(x => x.UsernameOrEmail)
+                .NotEmpty().WithMessage("Username or Email is required.");
+
+            RuleFor(x => x.Password)
+                .NotEmpty().WithMessage("Password is required.")
+                .MinimumLength(6).WithMessage("Password must be at least 6 characters long.")
+                .MaximumLength(100).WithMessage("Password must be at most 100 characters long.");
+        }
+    }
+}
